frontend/wolfstore/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wolfstore-frontend-deployment
  namespace: wolfns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wolfstore-frontend
  template:
    metadata:
      labels:
        app: wolfstore-frontend
    spec:
      containers:
        - name: wolfstore-frontend
          image: marcusvbrangel/wolfstore-frontend:1.1.1
          ports:
            - containerPort: 80
