frontend/wolfstore/k8s/wolfstore-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wolfstore-frontend-deployment
  namespace: wolfns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wolfstore-frontend
      type: frontend
      technology: angular
  template:
    metadata:
      labels:
        app: wolfstore-frontend
        type: frontend
        technology: angular
    spec:
      containers:
        - name: wolfstore-frontend
          image: marcusvbrangel/wolfstore-frontend:1.1.2
          ports:
            - containerPort: 80
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: wolfstore-frontend
                  type: frontend
                  technology: angular
              topologyKey: "kubernetes.io/hostname"
