frontend/wolfstore/k8s/wolfstore-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wolfstore-frontend-service
  namespace: wolfns
spec:
  selector:
    app: wolfstore-frontend
    type: frontend
    technology: angular
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
  type: LoadBalancer
